# football

./: README.md  evaluate_ball.py  pyproject.toml  track_ball_video.py  train_ball.py
configs/: pipeline_config.yaml
configs/training/: ball_config.yaml
dataset_pipeline/: __init__.py  catalog.py  frame_extraction.py  ingestion.py  label_generation.py  pipeline.py  postprocessing.py  qc.py  splitting.py  teacher_inference.py
training/: __init__.py  ball_config.yaml  config.py  dataset.py  utils.py
